--- a/design/city-guide/index.html
+++ b/design/city-guide/index.html
@@ -25,63 +25,118 @@
 <body>
   <section>
     <h2>
-      <a href="/design">&larr; Home</a>
+      <a href="/design">Owen Dodd</a>
     </h2>
     <h1>Artsy City Guide</h1>
+    <div class="img-wrapper header">
+      <img src="/design/city-guide/assets/city guide header.png" alt="Artsy City Guide" />
+    </div>
+
     <p>
       The Artsy City Guide was created to enable our user-base to easily discover and visit art in the physical world.
       The digital experience allows users to follow artists, galleries and museums for updates on new shows, and to
-      navigate to these shows in our 6 launch cities. The product was built as part of an on-going partnership with BMW and was integrated into our existing iOS app.
+      navigate to these shows in our 6 launch cities. The product was built as part of an on-going partnership with BMW
+      and was integrated into our existing iOS app.
     </p>
-    <div class="img-wrapper">
-        <img src="/design/city-guide/assets/city guide.png" alt="Artsy City Guide" />
-      </div>
   </section>
 
-  
+
 
   <section>
     <h2>Background</h2>
-    <p>The Artsy iOS app has existed since 2015 as a tool for art enthusiasts to browse and save artworks, follow artists, browse fairs, and explore gallery and musuem shows. The app experience was ultimately aimed at enabling collectors to purchase works of art via conversations with galleries and by bidding in auctions.</p>
+    <p>The Artsy iOS app has existed since 2015 as a tool for art enthusiasts to browse and save artworks, follow
+      artists, browse fairs, and explore gallery and musuem shows. The app experience was ultimately aimed at enabling
+      collectors to purchase works of art via conversations with galleries and by bidding in auctions.</p>
     <div class="img-wrapper">
-        <video autoplay loop muted>
-      <source src="/design/city-guide/assets/appv1.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-</video>
-      </div>
+      <video autoplay loop muted>
+        <source src="/design/city-guide/assets/appv1.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+    </div>
   </section>
 
   <section>
     <h2>Opportunity definition</h2>
-    <p>We have long known that shows are a crucial part of the collector journey, based on collector interviews, engagement with editorial show guides, and anecdotal info around competitor useage. While we do have a heavy focus on digital experinece, focus on building out </p>
+    <p>The Artsy iOS app has consistently had been one of the primary drivers of commerical activity while also only
+      performing moderately well in terms of engagement and retention. Our previous collector research had also shown
+      initial indications of the large roll that visiting shows and fairs play in collector behaviour and the high
+      frequency and which this behaviour happens.</p>
+    <p>After completeing an in-depth competitor anaylsis, we saw a large opportunity to create a product with a more
+      seamless and comprehensive user-experience, leveraging both our exisiting commerical infrastrucutre and our
+      personalization layers, neither of which were present in existing competitive products.</p>
+    <p>These inputs led us to believe that creating a product focused on the discovery and exploration of shows and
+      fairs, could increase our app engagement while simeltanesouly enhancing our collectors commercial experience.</p>
+    <div class="img-wrapper">
+      <img src="/design/city-guide/assets/city guide competitors.png" alt="Artsy City Guide" />
+    </div>
+
   </section>
 
   <section>
     <h2>Research</h2>
-    <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-      Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
-    <p>Take aways for V1</p>
-    <p>Take aways for V2</p>
-
-
+    <p>To further understand the specifics of we conducted a series of user interviews. Each conversation was focused on
+      highlighting the relationship between a collectors commerical behaviour and their show visiting habits. With each
+      subjects we discussed what factors influence their decisions to visit (or not visit) a show or fair. Finally, we
+      assesed the current tools they rely on and what sort of pain points existed in those experiences. </p>
+    <div class="img-wrapper">
+      <img src="/design/city-guide/assets/city guide interviews.png" alt="Artsy City Guide" />
+    </div>
+    <p>These conversations reinforced some of our initial assumptions around the importance of personalization and of
+      robust information on the arists, galleries, and museums associated with shows. They also highlighted the
+      importance of social validation when considering a show or fair to visit, something that is being explored in
+      subsequent iterations of the app.</p>
   </section>
 
   <section>
-    <h2>Exploration</h2>
-    <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-      Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+    <h2>Exploration and iteration</h2>
+    <p>TKTK</p>
+    <div class="img-wrapper">
+      <img src="/design/city-guide/assets/city wireframes.png" alt="Artsy City Guide" />
+    </div>
+    <p>TKTK</p>
+    <div class="img-wrapper">
+      <img src="/design/city-guide/assets/city switcher explorations.png" alt="Artsy City Guide" />
+    </div>
+
   </section>
 
   <section>
     <h2>Refinement</h2>
-    <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-      Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+    <p>TK</p>
+    <div class="img-wrapper">
+      <img src="/design/city-guide/assets/city and switcher.png" alt="Artsy City Guide" />
+    </div>
+    <p>TK</p>
+    <div class="img-wrapper">
+      <img src="/design/city-guide/assets/city guide home organization.png" alt="Artsy City Guide" />
+    </div>
+    <p>TK</p>
+    <div class="img-wrapper">
+      <img src="/design/city-guide/assets/city guide map.png" alt="Artsy City Guide" />
+    </div>
+    <p>TK</p>
+    <div class="img-wrapper">
+      <img src="/design/city-guide/assets/city guide fair.png" alt="Artsy City Guide" />
+    </div>
+    <p>TK</p>
+    <div class="img-wrapper">
+      <img src="/design/city-guide/assets/city guide show.png" alt="Artsy City Guide" />
+    </div>
   </section>
 
   <section>
     <h2>Analysis</h2>
     <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
       Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+  </section>
+
+  <section>
+    <h2>
+      <a class="contact date-right" href="/design/">Back to home</a><a class="contact date-right"
+        href="/design/assets/od_resume_2019.pdf">Download resume</a>
+      <a class="contact date-right" href="mailto:mail@owendodd.com">mail@owendodd.com</a>
+    </h2>
+    <h2></h2>
   </section>
 
 
