--- a/design/index.html
+++ b/design/index.html
@@ -40,7 +40,7 @@
 
     <div>
       <h2 class="footer">
-        <span class="contact">19 S. Oxford St. #10 Brooklyn, NY</span>
+        <span class="contact"><a href="#case-studies">Case studies</a>, <a href="#work-history">work history</a>, <a href="#additional-work">additional work</a></span>
         <a class="contact" href="mailto:mail@owendodd.com">mail@owendodd.com</a>
         <a class="contact" href="tel:303-819-0844">+1 (303) 819 0844</a>
       </h2>
@@ -52,28 +52,29 @@
   </div>
 
   <!-- Start projects -->
+
   <section class="first">
-    <h2 class="section-title">• Case studies</h2>
+    <h2 class="section-title" id="case-studies">• Case studies</h2>
     <div class="case-study-wrapper">
       <a href="/design/city-guide/">
         <div class="case-study">
-          <img src="/assets/imgs/slider1-1.jpg" alt="" />
+          <img src="/design/assets/city guide thumb.png" alt="" />
           <h1>Artsy City Guide</h1>
         </div>
       </a>
-      <div class="case-study">
-        <img src="/assets/imgs/slider1-1.jpg" alt="" />
-        <h1>Artsy City Guide</h1>
-      </div>
-      <div class="case-study">
-        <img src="/assets/imgs/slider1-1.jpg" alt="" />
-        <h1>Artsy City Guide</h1>
-      </div>
+      <a href="/design/palette/">
+        <div class="case-study">
+
+          <img src="/design/assets/palette thumb.png" alt="" />
+          <h1>Palette Design System</h1>
+
+        </div>
+      </a>
     </div>
   </section>
 
   <section>
-    <h2 class="section-title">• Work history</h2>
+    <h2 class="section-title" id="work-history">• Work history</h2>
     <h1>
       Artsy <span class="date-right">(2015–Present)</span>
       <span class="date-right">Product&nbsp;Designer</span>
@@ -86,7 +87,7 @@
       Artsy empowers a global audience to learn about, discover, and collect
       art.
     </p>
-    <br />
+    <!-- <br />
 
     <h2>Feb 2019–Present</h2>
     <p>
@@ -94,10 +95,7 @@
       enable our network of subscribing gallery partners to managage their
       inventory of works and connect with new and established collectors.
     </p>
-    <div class="img-wrapper">
-      <img src="/design/assets/analytics.png" alt="Analytics dashboard" />
-    </div>
-    <h2 class="caption">Partner analytics dashboard</h2>
+
     <br />
 
     <h2>Jan 2018–Feb 2019</h2>
@@ -106,22 +104,7 @@
       through the creation and optimization of commericial pathways both on
       and off platform.
     </p>
-    <div class="img-wrapper">
-      <img src="/design/assets/collections.png" alt="Analytics dashboard" />
-    </div>
-    <h2 class="caption">Collections and collections admin</h2>
-    <div class="img-wrapper">
-      <img src="/design/assets/city guide.png" alt="Artsy City Guide" />
-    </div>
-    <h2 class="caption">Artsy City Guide, in partnership with BMW</h2>
-    <div class="img-wrapper">
-      <img src="/design/assets/article tooltips.png" alt="Analytics dashboard" />
-    </div>
-    <h2 class="caption">Aritcle artist tooltips</h2>
-    <div class="img-wrapper">
-      <img src="/design/assets/inputs.png" alt="Quick input" />
-    </div>
-    <h2 class="caption">Quick input component</h2>
+
     <br />
 
     <h2>Nov 2015–Jan 2018</h2>
@@ -131,26 +114,7 @@
       team as they grew to become one of the most read online arts
       publications.
     </p>
-    <div class="img-wrapper">
-      <img src="/design/assets/feature articles.png" alt="Editorial feature articles" />
-    </div>
-    <h2 class="caption">Editorial feature articles</h2>
-    <div class="img-wrapper">
-      <img src="/design/assets/video articles.png" alt="Video player" />
-    </div>
-    <h2 class="caption">Video layout and custom player UI</h2>
-    <div class="img-wrapper">
-      <img src="/design/assets/standard articles.png" alt="Standard editorial articles" />
-    </div>
-    <h2 class="caption">Standard editorial articles</h2>
-    <div class="img-wrapper">
-      <img src="/design/assets/news feed.png" alt="News feed" />
-    </div>
-    <h2 class="caption">News feed and news blurbs</h2>
-    <div class="img-wrapper">
-      <img src="/design/assets/brand partnerships.png" alt="Brand partnerships" />
-    </div>
-    <h2 class="caption">Editorial brand partnerships</h2>
+
     <br />
 
     <h2>Jan–Nov 2015</h2>
@@ -159,7 +123,7 @@
       end of the web product creating and optimizing experiences to enable our
       users to collect and learn about art online. Developing printed and
       digital collateral for a range of events and partnerships.
-    </p>
+    </p> -->
   </section>
 
   <section>
@@ -188,8 +152,44 @@
   </section>
 
   <section>
+    <h2 class="section-title" id="additional-work">• Additional work</h2>
+    <div class="img-wrapper">
+      <img src="/design/assets/analytics.png" alt="Analytics dashboard" />
+    </div>
+    <h2 class="caption">Partner analytics dashboard</h2>
+    <div class="img-wrapper">
+      <img src="/design/assets/collections.png" alt="Analytics dashboard" />
+    </div>
+    <h2 class="caption">Collections and collections admin</h2>
+    <div class="img-wrapper">
+      <img src="/design/assets/article tooltips.png" alt="Analytics dashboard" />
+    </div>
+    <h2 class="caption">Aritcle artist tooltips</h2>
+    <div class="img-wrapper">
+      <img src="/design/assets/feature articles.png" alt="Editorial feature articles" />
+    </div>
+    <h2 class="caption">Editorial feature articles</h2>
+    <div class="img-wrapper">
+      <img src="/design/assets/video articles.png" alt="Video player" />
+    </div>
+    <h2 class="caption">Video layout and custom player UI</h2>
+    <div class="img-wrapper">
+      <img src="/design/assets/standard articles.png" alt="Standard editorial articles" />
+    </div>
+    <h2 class="caption">Standard editorial articles</h2>
+    <div class="img-wrapper">
+      <img src="/design/assets/news feed.png" alt="News feed" />
+    </div>
+    <h2 class="caption">News feed and news blurbs</h2>
+    <div class="img-wrapper">
+      <img src="/design/assets/brand partnerships.png" alt="Brand partnerships" />
+    </div>
+    <h2 class="caption">Editorial brand partnerships</h2>
+  </section>
+
+  <section>
     <h2>
-      <span class="date-right">Case-studies available upon request.</span><a class="contact date-right"
+      <span class="date-right">Additional case-studies available upon request.</span><a class="contact date-right"
         href="/design/assets/od_resume_2019.pdf">Download resume</a>
       <a class="contact date-right" href="mailto:mail@owendodd.com">mail@owendodd.com</a>
     </h2>
