Add copy for case studies

--- a/design/city-guide/index.html
+++ b/design/city-guide/index.html
@@ -89,11 +89,11 @@
 
   <section>
     <h2>Exploration and iteration</h2>
-    <p>TKTK</p>
+    <p>After developing an initial understanding of our opportunity with key stakeholders, we began working on a more developed approach to the information architecture and sturcutre of the app through a series of wireframes. These explorations were continuously assesed by our internal teams and tweaked based on feedback.</p>
     <div class="img-wrapper">
       <img src="/design/city-guide/assets/city wireframes.png" alt="Artsy City Guide" />
     </div>
-    <p>TKTK</p>
+    <p>Simultaneously we bagan to explore various aspects of the UI, iterating on various components. These explorationships were then assesed by internal teams and reconciled with existing UX patterns and visual language.</p>
     <div class="img-wrapper">
       <img src="/design/city-guide/assets/city switcher explorations.png" alt="Artsy City Guide" />
     </div>
@@ -101,24 +101,24 @@
   </section>
 
   <section>
-    <h2>Refinement</h2>
-    <p>TK</p>
+    <h2>Design</h2>
+    <p>The core app experience is based around 6 initial  launch locations. When location services are enabled.  The feature set will quickly be expanded to suport wider geographic areas.</p>
     <div class="img-wrapper">
       <img src="/design/city-guide/assets/city and switcher.png" alt="Artsy City Guide" />
     </div>
-    <p>TK</p>
+    <p>The home view of each city offers a variety of entry points into the wide range of shows and events, broken down into time sensitive, personalized, and curated content buckets.</p>
     <div class="img-wrapper">
       <img src="/design/city-guide/assets/city guide home organization.png" alt="Artsy City Guide" />
     </div>
-    <p>TK</p>
+    <p>The map view for each city allows users to quickly place themselves in relation to the events around them. Specific UI considerations were implemented to allow for easy browsing of mulitiple events in particularly dense areas.</p>
     <div class="img-wrapper">
       <img src="/design/city-guide/assets/city guide map.png" alt="Artsy City Guide" />
     </div>
-    <p>TK</p>
+    <p>New fair views allow users to browse and search by artists, exhibitors (galleries), or works. Additional information about the fair location and other programming is also easily accesible on the overview page.</p>
     <div class="img-wrapper">
       <img src="/design/city-guide/assets/city guide fair.png" alt="Artsy City Guide" />
     </div>
-    <p>TK</p>
+    <p>The show view surfaces key information about the show and highlights any works that are part of the show whenever available. This view is integrated with our existing artist and artwork infrastructure.</p>
     <div class="img-wrapper">
       <img src="/design/city-guide/assets/city guide show.png" alt="Artsy City Guide" />
     </div>
@@ -126,8 +126,7 @@
 
   <section>
     <h2>Analysis</h2>
-    <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-      Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+    <p>While results are still preliminary, since the launch of the app, we have surpased our initial goals with regard to account creation and have seen our highest number of commercial interations within the app to date. These metrics will continue to be monitored as the new feature set gains more traction with our user base.</p>
   </section>
 
   <section>
