--- a/design/index.html
+++ b/design/index.html
@@ -151,7 +151,7 @@
     </p>
   </section>
 
-  <section>
+  <section class="grey">
     <h2 class="section-title" id="additional-work">• Additional work</h2>
     <div class="img-wrapper">
       <img src="/design/assets/analytics.png" alt="Analytics dashboard" />
@@ -187,7 +187,7 @@
     <h2 class="caption">Editorial brand partnerships</h2>
   </section>
 
-  <section>
+  <section class="grey">
     <h2>
       <span class="date-right">Additional case-studies available upon request.</span><a class="contact date-right"
         href="/design/assets/od_resume_2019.pdf">Download resume</a>
