--- a/design/city-guide/index.html
+++ b/design/city-guide/index.html
@@ -45,7 +45,7 @@
   <section>
     <h2>Background</h2>
     <p>The Artsy iOS app has existed since 2015 as a tool for art enthusiasts to browse and save artworks, follow
-      artists, browse fairs, and explore gallery and musuem shows. The app experience was ultimately aimed at enabling
+      artists, and explore fairs, galleries and musuems. The app experience was ultimately aimed at enabling
       collectors to purchase works of art via conversations with galleries and by bidding in auctions.</p>
     <div class="img-wrapper">
       <video autoplay loop muted>
@@ -59,13 +59,13 @@
     <h2>Opportunity definition</h2>
     <p>The Artsy iOS app has consistently had been one of the primary drivers of commerical activity while also only
       performing moderately well in terms of engagement and retention. Our previous collector research had also shown
-      initial indications of the large roll that visiting shows and fairs play in collector behaviour and the high
-      frequency and which this behaviour happens.</p>
+      initial indications of the large roll that visiting shows and fairs play in collector behavior and the high
+      frequency and which this behavior happens.</p>
     <p>After completeing an in-depth competitor anaylsis, we saw a large opportunity to create a product with a more
       seamless and comprehensive user-experience, leveraging both our exisiting commerical infrastrucutre and our
-      personalization layers, neither of which were present in existing competitive products.</p>
+      personalization layers, neither of which existed in competitive products.</p>
     <p>These inputs led us to believe that creating a product focused on the discovery and exploration of shows and
-      fairs, could increase our app engagement while simeltanesouly enhancing our collectors commercial experience.</p>
+      fairs could increase our app engagement while simeltanesouly enhancing our collectors commercial experience.</p>
     <div class="img-wrapper">
       <img src="/design/city-guide/assets/city guide competitors.png" alt="Artsy City Guide" />
     </div>
@@ -76,8 +76,7 @@
     <h2>Research</h2>
     <p>To further understand the specifics of we conducted a series of user interviews. Each conversation was focused on
       highlighting the relationship between a collectors commerical behaviour and their show visiting habits. With each
-      subjects we discussed what factors influence their decisions to visit (or not visit) a show or fair. Finally, we
-      assesed the current tools they rely on and what sort of pain points existed in those experiences. </p>
+      subjects we discussed what factors influence their decisions to visit (or not visit) a show or fair, what key information they rely on, and what tools they use to assit throughout their process.</p>
     <div class="img-wrapper">
       <img src="/design/city-guide/assets/city guide interviews.png" alt="Artsy City Guide" />
     </div>
@@ -93,7 +92,7 @@
     <div class="img-wrapper">
       <img src="/design/city-guide/assets/city wireframes.png" alt="Artsy City Guide" />
     </div>
-    <p>Simultaneously we bagan to explore various aspects of the UI, iterating on various components. These explorationships were then assesed by internal teams and reconciled with existing UX patterns and visual language.</p>
+    <p>Simultaneously we bagan to explore various aspects of the UI, iterating on various components. These explorations were then evaluated by internal teams and reconciled with existing UX patterns and visual language.</p>
     <div class="img-wrapper">
       <img src="/design/city-guide/assets/city switcher explorations.png" alt="Artsy City Guide" />
     </div>
@@ -102,7 +101,7 @@
 
   <section>
     <h2>Design</h2>
-    <p>The core app experience is based around 6 initial  launch locations. When location services are enabled.  The feature set will quickly be expanded to suport wider geographic areas.</p>
+    <p>The core app experience is based around 6 initial  launch locations. When location services are enabled users are automatically placed within their current city if supported, with the ability to quickly switch to other locations via the dropdown menu. The feature set will quickly be expanded to suport wider geographic areas.</p>
     <div class="img-wrapper">
       <img src="/design/city-guide/assets/city and switcher.png" alt="Artsy City Guide" />
     </div>
@@ -126,7 +125,7 @@
 
   <section>
     <h2>Analysis</h2>
-    <p>While results are still preliminary, since the launch of the app, we have surpased our initial goals with regard to account creation and have seen our highest number of commercial interations within the app to date. These metrics will continue to be monitored as the new feature set gains more traction with our user base.</p>
+    <p>While results are still preliminary, since the launch of the app we have surpased our initial goals with regard to account creation and have seen our highest number of commercial interations within the app to date. These metrics will continue to be monitored as the product useage increases.</p>
   </section>
 
   <section>
