--- a/work/index.html
+++ b/work/index.html
@@ -56,16 +56,16 @@
   <section class="first">
     <h2 class="section-title" id="case-studies">• Case studies</h2>
     <div class="case-study-wrapper">
-      <a href="/design/city-guide/">
+      <a href="/work/city-guide/">
         <div class="case-study">
-          <img src="/design/assets/city guide thumb.png" alt="" />
+          <img src="/work/assets/city guide thumb.png" alt="" />
           <h1>Artsy City Guide</h1>
         </div>
       </a>
-      <a href="/design/palette/">
+      <a href="/work/palette/">
         <div class="case-study">
 
-          <img src="/design/assets/palette thumb.png" alt="" />
+          <img src="/work/assets/palette thumb.png" alt="" />
           <h1>Palette Design System</h1>
 
         </div>
@@ -154,35 +154,35 @@
   <section class="grey">
     <h2 class="section-title" id="additional-work">• Additional work</h2>
     <div class="img-wrapper">
-      <img src="/design/assets/analytics.png" alt="Analytics dashboard" />
+      <img src="/work/assets/analytics.png" alt="Analytics dashboard" />
     </div>
     <h2 class="caption">Partner analytics dashboard</h2>
     <div class="img-wrapper">
-      <img src="/design/assets/collections.png" alt="Analytics dashboard" />
+      <img src="/work/assets/collections.png" alt="Analytics dashboard" />
     </div>
     <h2 class="caption">Collections and collections admin</h2>
     <div class="img-wrapper">
-      <img src="/design/assets/article tooltips.png" alt="Analytics dashboard" />
+      <img src="/work/assets/article tooltips.png" alt="Analytics dashboard" />
     </div>
     <h2 class="caption">Aritcle artist tooltips</h2>
     <div class="img-wrapper">
-      <img src="/design/assets/feature articles.png" alt="Editorial feature articles" />
+      <img src="/work/assets/feature articles.png" alt="Editorial feature articles" />
     </div>
     <h2 class="caption">Editorial feature articles</h2>
     <div class="img-wrapper">
-      <img src="/design/assets/video articles.png" alt="Video player" />
+      <img src="/work/assets/video articles.png" alt="Video player" />
     </div>
     <h2 class="caption">Video layout and custom player UI</h2>
     <div class="img-wrapper">
-      <img src="/design/assets/standard articles.png" alt="Standard editorial articles" />
+      <img src="/work/assets/standard articles.png" alt="Standard editorial articles" />
     </div>
     <h2 class="caption">Standard editorial articles</h2>
     <div class="img-wrapper">
-      <img src="/design/assets/news feed.png" alt="News feed" />
+      <img src="/work/assets/news feed.png" alt="News feed" />
     </div>
     <h2 class="caption">News feed and news blurbs</h2>
     <div class="img-wrapper">
-      <img src="/design/assets/brand partnerships.png" alt="Brand partnerships" />
+      <img src="/work/assets/brand partnerships.png" alt="Brand partnerships" />
     </div>
     <h2 class="caption">Editorial brand partnerships</h2>
   </section>
@@ -190,7 +190,7 @@
   <section class="grey">
     <h2>
       <span class="date-right">Additional case-studies available upon request.</span><a class="contact date-right"
-        href="/design/assets/od_resume_2019.pdf">Download resume</a>
+        href="/work/assets/od_resume_2019.pdf">Download resume</a>
       <a class="contact date-right" href="mailto:mail@owendodd.com">mail@owendodd.com</a>
     </h2>
     <h2></h2>
