--- a/work/city-guide/index.html
+++ b/work/city-guide/index.html
@@ -25,11 +25,11 @@
 <body>
   <section>
     <h2>
-      <a href="/design">Owen Dodd</a>
+      <a href="/work">Owen Dodd</a>
     </h2>
     <h1>Artsy City Guide</h1>
     <div class="img-wrapper header">
-      <img src="/design/city-guide/assets/city guide header.png" alt="Artsy City Guide" />
+      <img src="/work/city-guide/assets/city guide header.png" alt="Artsy City Guide" />
     </div>
 
     <p>
@@ -49,7 +49,7 @@
       collectors to purchase works of art via conversations with galleries and by bidding in auctions.</p>
     <div class="img-wrapper">
       <video autoplay loop muted>
-        <source src="/design/city-guide/assets/appv1.mp4" type="video/mp4">
+        <source src="/work/city-guide/assets/appv1.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     </div>
@@ -67,7 +67,7 @@
     <p>These inputs led us to believe that creating a product focused on the discovery and exploration of shows and
       fairs could increase our app engagement while simeltanesouly enhancing our collectors commercial experience.</p>
     <div class="img-wrapper">
-      <img src="/design/city-guide/assets/city guide competitors.png" alt="Artsy City Guide" />
+      <img src="/work/city-guide/assets/city guide competitors.png" alt="Artsy City Guide" />
     </div>
 
   </section>
@@ -78,7 +78,7 @@
       highlighting the relationship between a collectors commerical behaviour and their show visiting habits. With each
       subjects we discussed what factors influence their decisions to visit (or not visit) a show or fair, what key information they rely on, and what tools they use to assit throughout their process.</p>
     <div class="img-wrapper">
-      <img src="/design/city-guide/assets/city guide interviews.png" alt="Artsy City Guide" />
+      <img src="/work/city-guide/assets/city guide interviews.png" alt="Artsy City Guide" />
     </div>
     <p>These conversations reinforced some of our initial assumptions around the importance of personalization and of
       robust information on the arists, galleries, and museums associated with shows. They also highlighted the
@@ -90,11 +90,11 @@
     <h2>Exploration and iteration</h2>
     <p>After developing an initial understanding of our opportunity with key stakeholders, we began working on a more developed approach to the information architecture and sturcutre of the app through a series of wireframes. These explorations were continuously assesed by our internal teams and tweaked based on feedback.</p>
     <div class="img-wrapper">
-      <img src="/design/city-guide/assets/city wireframes.png" alt="Artsy City Guide" />
+      <img src="/work/city-guide/assets/city wireframes.png" alt="Artsy City Guide" />
     </div>
     <p>Simultaneously we bagan to explore various aspects of the UI, iterating on various components. These explorations were then evaluated by internal teams and reconciled with existing UX patterns and visual language.</p>
     <div class="img-wrapper">
-      <img src="/design/city-guide/assets/city switcher explorations.png" alt="Artsy City Guide" />
+      <img src="/work/city-guide/assets/city switcher explorations.png" alt="Artsy City Guide" />
     </div>
 
   </section>
@@ -103,23 +103,23 @@
     <h2>Design</h2>
     <p>The core app experience is based around 6 initial  launch locations. When location services are enabled users are automatically placed within their current city if supported, with the ability to quickly switch to other locations via the dropdown menu. The feature set will quickly be expanded to suport wider geographic areas.</p>
     <div class="img-wrapper">
-      <img src="/design/city-guide/assets/city and switcher.png" alt="Artsy City Guide" />
+      <img src="/work/city-guide/assets/city and switcher.png" alt="Artsy City Guide" />
     </div>
     <p>The home view of each city offers a variety of entry points into the wide range of shows and events, broken down into time sensitive, personalized, and curated content buckets.</p>
     <div class="img-wrapper">
-      <img src="/design/city-guide/assets/city guide home organization.png" alt="Artsy City Guide" />
+      <img src="/work/city-guide/assets/city guide home organization.png" alt="Artsy City Guide" />
     </div>
     <p>The map view for each city allows users to quickly place themselves in relation to the events around them. Specific UI considerations were implemented to allow for easy browsing of mulitiple events in particularly dense areas.</p>
     <div class="img-wrapper">
-      <img src="/design/city-guide/assets/city guide map.png" alt="Artsy City Guide" />
+      <img src="/work/city-guide/assets/city guide map.png" alt="Artsy City Guide" />
     </div>
     <p>New fair views allow users to browse and search by artists, exhibitors (galleries), or works. Additional information about the fair location and other programming is also easily accesible on the overview page.</p>
     <div class="img-wrapper">
-      <img src="/design/city-guide/assets/city guide fair.png" alt="Artsy City Guide" />
+      <img src="/work/city-guide/assets/city guide fair.png" alt="Artsy City Guide" />
     </div>
     <p>The show view surfaces key information about the show and highlights any works that are part of the show whenever available. This view is integrated with our existing artist and artwork infrastructure.</p>
     <div class="img-wrapper">
-      <img src="/design/city-guide/assets/city guide show.png" alt="Artsy City Guide" />
+      <img src="/work/city-guide/assets/city guide show.png" alt="Artsy City Guide" />
     </div>
   </section>
 
@@ -130,8 +130,8 @@
 
   <section>
     <h2>
-      <a class="contact date-right" href="/design/">Back to home</a><a class="contact date-right"
-        href="/design/assets/od_resume_2019.pdf">Download resume</a>
+      <a class="contact date-right" href="/work/">Back to home</a><a class="contact date-right"
+        href="/work/assets/od_resume_2019.pdf">Download resume</a>
       <a class="contact date-right" href="mailto:mail@owendodd.com">mail@owendodd.com</a>
     </h2>
     <h2></h2>
