--- a/work/palette/index.html
+++ b/work/palette/index.html
@@ -25,11 +25,11 @@
 <body>
   <section>
     <h2>
-      <a href="/design">Owen Dodd</a>
+      <a href="/work">Owen Dodd</a>
     </h2>
     <h1>Palette Design System</h1>
     <div class="img-wrapper header">
-      <img src="/design/palette/assets/palette header.png" alt="Palette" />
+      <img src="/work/palette/assets/palette header.png" alt="Palette" />
     </div>
   </section>
 
@@ -53,13 +53,13 @@
     <p>Assessing our existing implementation of common UI and UX patterns revealed a high level of inconsistency in both
       the design treatment and technical implementation of functionally similar components.</p>
     <div class="img-wrapper">
-      <img src="/design/palette/assets/palette visual audit.png" alt="Palette" />
+      <img src="/work/palette/assets/palette visual audit.png" alt="Palette" />
     </div>
     <p>As our codebase moved more and more into React, our usage of components continued to be team specific, and lacked
       a cohesive strategy. These divergent approachs resulted in a large amount of overhead in developing new
       experiences and iterating on current products.</p>
     <div class="img-wrapper">
-      <img src="/design/palette/assets/palette storybooks audit.png" alt="Palette" />
+      <img src="/work/palette/assets/palette storybooks audit.png" alt="Palette" />
     </div>
   </section>
 
@@ -70,13 +70,13 @@
       potential contributors. The result of this was the formation of a small task force, meeting on a biweekly basis,
       and robust documentation for all aspects of the design systems development process. </p>
     <div class="img-wrapper">
-      <img src="/design/palette/assets/palette meeting.png" alt="Palette" />
+      <img src="/work/palette/assets/palette meeting.png" alt="Palette" />
     </div>
     <p>Our documentation was created to ensure a consistent style and framework for all additions to our design system.
       This was especially important for our team as both the engineering and design team scaled without dedicated
       resources focused on the health and continued application of these systems.</p>
     <div class="img-wrapper">
-      <img src="/design/palette/assets/palette component process.png" alt="Palette" />
+      <img src="/work/palette/assets/palette component process.png" alt="Palette" />
     </div>
   </section>
 
@@ -88,7 +88,7 @@
       additions to this system should be useful across a many of our products, working in a wide range contexts and for
       a variety of users.</p>
     <div class="img-wrapper">
-      <img src="/design/palette/assets/palette heirarchy.png" alt="Palette" />
+      <img src="/work/palette/assets/palette heirarchy.png" alt="Palette" />
     </div>
 
   </section>
@@ -97,12 +97,12 @@
     <h2>Components: typography</h2>
     <p>After an inital round of standardization of our type sizes and consolidation of their implementation we began developing an additional layer of typographic variables. The semantic naming of these variable created more clarity in how they should be applied. Additionally, these variables incorporated responsive logic allowing us to more easily scale type relationships across our breakpoints.</p>
     <div class="img-wrapper">
-      <img src="/design/palette/assets/palette typography docs.png" alt="Palette" />
+      <img src="/work/palette/assets/palette typography docs.png" alt="Palette" />
     </div>
     <p>Throughout this process, it was cruicial to continually test these variables accross our key product surfaces to ensure its functionality.</p>
     <div class="img-wrapper">
       <div class="img-wrapper">
-        <img src="/design/palette/assets/palette typography tests.png" alt="Palette" />
+        <img src="/work/palette/assets/palette typography tests.png" alt="Palette" />
       </div>
     </div>
   </section>
@@ -110,21 +110,21 @@
     <h2>Components: quick inputs</h2>
     <p>Our quick edit input were created to capture information in contexts where experiences must be as lightweight as possible. Used prominitely in our log in and sign up forms, these elements are meant to be as condensed as possible while retaining their clairity and functionality.</p>
     <div class="img-wrapper">
-      <img src="/design/palette/assets/palette quick input.png" alt="Palette" />
+      <img src="/work/palette/assets/palette quick input.png" alt="Palette" />
     </div>
   </section>
   <section>
     <h2>Components: modals</h2>
     <p>Modals are used across our platform for quick actions and to surface important contextual information. The new modal compontent in Palette was created with two size variations, and a number of standardized treatment options for CTAs, forms, titles and other commonly used UI.</p>
     <div class="img-wrapper">
-      <img src="/design/palette/assets/palette heirarchy.png" alt="Palette" />
+      <img src="/work/palette/assets/palette heirarchy.png" alt="Palette" />
     </div>
   </section>
   <section>
     <h2>Components: data visualization</h2>
     <p>An initial bar chart component was initially created when we began surfacing data to users both on the front end of the site and in our partner-facing CMS. Soon after, additional visualization options were added to support a wider variety of data types.</p>
     <div class="img-wrapper">
-      <img src="/design/palette/assets/palette data visualization.png" alt="Palette" />
+      <img src="/work/palette/assets/palette data visualization.png" alt="Palette" />
     </div>
   </section>
 
@@ -132,14 +132,14 @@
     <h2>Moving forward</h2>
     <p>As our design system is increasingly adopted across our product areas, we have continued to emphasis the importance of documentation of usage, and guidelines, creating a centralized, structured home for this work to live. This work will continue to evolve and be refined as we increase useage and find the boundries of our current systems.</p>
     <div class="img-wrapper">
-      <img src="/design/palette/assets/palette banner.png" alt="Palette" />
+      <img src="/work/palette/assets/palette banner.png" alt="Palette" />
     </div>
   </section>
 
   <section>
     <h2>
-      <a class="contact date-right" href="/design/">Back to home</a><a class="contact date-right"
-        href="/design/assets/od_resume_2019.pdf">Download resume</a>
+      <a class="contact date-right" href="/work/">Back to home</a><a class="contact date-right"
+        href="/work/assets/od_resume_2019.pdf">Download resume</a>
       <a class="contact date-right" href="mailto:mail@owendodd.com">mail@owendodd.com</a>
     </h2>
     <h2></h2>
